Adjusted carousel text, hover on index.html for responsiveness

--- a/content/index.html
+++ b/content/index.html
@@ -17,6 +17,9 @@ tags:
                 <a href="/get_involved/donations/" class="btn btn-primary active" role="button">Donate Now</a>
                 <a href="/stories/story1/" class="btn btn-primary active" role="button">Learn More</a>
           </div>
+          <div class="carousel-caption captionsmallleft">
+            <h4 class="captionsmall">Help us Bring Back a Smile</h4>
+          </div>
           <div class="carousel-caption captionattributionright">
                 <a href="https://creativecommons.org/licenses/by-nc/2.0/legalcode" target="_blank">Photo by Michael Dreves Beier</a>
           </div>
@@ -29,6 +32,9 @@ tags:
                 <a href="/get_involved/donations/" class="btn btn-primary active" role="button">Donate Now</a>
                 <a href="/stories/story2/" class="btn btn-primary active" role="button">Learn More</a>
           </div>
+          <div class="carousel-caption captionsmallright">
+              <h4 class="captionsmall">Dental Care for Those in Need</h4>
+          </div>
           <div class="carousel-caption captionattributionleft">
               <a href="https://creativecommons.org/licenses/by-nc-nd/2.0/legalcode" target="_blank">Photo by Laurent Lavì Lazzeresky</a>
           </div>
@@ -40,6 +46,9 @@ tags:
             <h4 class="carousel">When Monica needed emergency extractions, SACDC jumped in to help</h4>
                 <a href="/get_involved/donations/" class="btn btn-primary active" role="button">Donate Now</a>
                 <a href="/stories/story3/" class="btn btn-primary active" role="button">Learn More</a>
+          </div>
+          <div class="carousel-caption captionsmallleft">
+              <h4 class="captionsmall">The Need is Great</h4>
           </div>
           <div class="carousel-caption captionattributionright">
               <a href="https://creativecommons.org/licenses/by-nc-nd/2.0/legalcode" target="_blank">Photo by Laurent Lavì Lazzeresky</a>
