Fixed 'tinted' glitch

--- a/content/index.html
+++ b/content/index.html
@@ -64,30 +64,36 @@ tags:
   </div>
   <div class="row">
     <div class="col-md-4">
-      <a class="tinted" href="/seek_care/">
-        <img class="bs-docs-featurette-img img-responsive" src="/static/imgs/pic-content/pic17_480.jpg">
+      <div class="tinted">
+        <a href="/seek_care/">
+          <img class="bs-docs-featurette-img img-responsive" src="/static/imgs/pic-content/pic17_480.jpg">
           <div class="carousel-caption carousel-caption-ctr">
             <h3>The Problem: Lack of Access</h3>
           </div>
-      </a>
+        </a>
+      </div>
       <h4 class="text-center">41% of San Antonio adults lack access to basic dental care.</h4>
     </div>
     <div class="col-md-4">
-        <a class="tinted" href="/seek_care/sched_vst">
+      <div class="tinted">
+        <a href="/seek_care/sched_vst">
             <img class="bs-docs-featurette-img img-responsive" src="/static/imgs/pic-content/pic18_480.jpg">
                 <div class="carousel-caption carousel-caption-ctr">
                     <h3>Breaking Down Barriers</h3>
                 </div>
                 </a>
+      </div>
         <h4 class="text-center">We provide free dental care to San Antonio's homeless and low income adults.</h4>
     </div>
     <div class="col-md-4">
-        <a class="tinted" href="/get_involved/">
+      <div class="tinted">
+        <a href="/get_involved/">
             <img class="bs-docs-featurette-img img-responsive" src="/static/imgs/pic-content/pic19_480.jpg">
                 <div class="carousel-caption carousel-caption-ctr">
                     <h3>How You Can Help</h3>
                 </div>
                 </a>
+      </div>
         <h4 class="text-center">Help us shape San Antonio's future, together.</h4>
     </div>
   </div>
