Enclosed each part of the donation form in a well starting with the word transaction.  Come to think of it I should have just created one div with class=well to encapsulate all form data in a well...

--- a/content/get_involved/donations_2.html
+++ b/content/get_involved/donations_2.html
@@ -13,7 +13,7 @@ tags:
 
     <hr class="half-rule">
 
-    <div class="well" id="amount-block">
+    <div class="well" id="transaction-amount-block">
       <p> Step: <b style="font-size:2em;">1</b> __ 2 __ 3 __ 4 </p>
       <form class="form row" role="form" id="amount-form" method="post">
         <div class="col-xs-4">
@@ -39,7 +39,7 @@ tags:
       </form>
     </div>
 
-    <div class="" id="who-block" style="display:none;">
+    <div class="well" id="transaction-who-block" style="display:none;">
       <p> Step: 1 __ <b style="font-size:2em;">2</b> __ 3 __ 4 </p>
       <p> Please enter your billing information as it appears on your account. </p>
       <form class="form row" role="form" id="who-form" method="post">
@@ -85,7 +85,7 @@ tags:
     </form>
 
 
-    <div class="" id="CC-block" style="display:none;">
+    <div class="well" id="transaction-CC-block" style="display:none;">
       <p> Step: 1 __ 2 __ <b style="font-size:2em;">3</b> __ 4 </p>
       <div>Ok you want to donate: $<span class="amount"></span></div>
       <form class="CC form-horizontal" role="form" id="CC-form" method="post">
@@ -111,7 +111,7 @@ tags:
       </form>
     </div>
 
-  <div id="confirm-block" style="display:none;">
+  <div class="well" id="transaction-confirm-block" style="display:none;">
     <p> If the following is wrong please click the data to correct:</p>
     <span id="confirm-data"></span>
     <p> Step: 1 __ 2 __ 3 __ <b style="font-size:2em;">4</b> </p>
