Started working on single DIV for donation form.

--- a/content/get_involved/donations_2.html
+++ b/content/get_involved/donations_2.html
@@ -13,6 +13,14 @@ tags:
 
     <hr class="half-rule">
 
+    <div calss="well" id="transaction-central">
+      <p> Step: <span id="tx-one" style="font-size:2em;">1</span> __
+                <span id="tx-two">2</span> __
+                <span id="tx-three">3</span> __
+                <span id="tx-four">4</span>
+      </p>
+    </div>
+
     <div class="well" id="transaction-amount-block">
       <p> Step: <b style="font-size:2em;">1</b> __ 2 __ 3 __ 4 </p>
       <form class="form row" role="form" id="amount-form" method="post">
