Fixed uneven dropdown menus on main navbar.

--- a/content/get_involved/donations_2.html
+++ b/content/get_involved/donations_2.html
@@ -24,9 +24,9 @@ tags:
         <form class="form row" role="form" id="amount-form" method="post">
           <table class="table">
             <tr>
-              <td>Operational Support: <input type="number" min=0 max=100 value='0' name="ops-percent">%</td>
-              <td>Patient Care: <input type="number" min=0 max=100 value='0' name="patient-percent">%</td>
-              <td>Discretionary: <input type="number" min=0 max=100 value='100' name="disc-percent">%</td>
+              <td>Operational Support: <input class="percent-ops" type="number" min=0 max=100 value='0' name="percent-ops">%</td>
+              <td>Patient Care: <input class="percent-patient" type="number" min=0 max=100 value='0' name="percent-patient">%</td>
+              <td>Discretionary: <input class="percent-disc" type="number" min=0 max=100 value='100' name="percent-disc">%</td>
             </tr>
             <tr>
               <td><button class="btn btn-default" type="submit" value="10">$10</button></td>
