Removed zero padding/margin from .well class --this had prevented me from using column offsets correctly. Found/corrected mismatched </div> in /index.html that was preventing the footer from rendering within the main container.

--- a/content/index.html
+++ b/content/index.html
@@ -54,62 +54,64 @@ tags:
               <a href="https://creativecommons.org/licenses/by-nc-nd/2.0/legalcode" target="_blank">Photo by Laurent Lavì Lazzeresky</a>
           </div>
         </div>
-      </div>
     </div>
   </div>
-  <div class="row">
-    <div class="col-md-10 col-md-offset-1">
-      <h3 class="text-center">The San Antonio Christian Dental Clinic is on a mission to extend Christ's healing by providing charitable dental care to underserved Bexar County adults</h3></br>
-    </div>
+
+<div class="row">
+  <div class="col-md-10 col-md-offset-1">
+    <h3 class="text-center">The San Antonio Christian Dental Clinic is on a mission to extend Christ's healing by providing charitable dental care to underserved Bexar County adults</h3><br>
   </div>
-  <div class="row">
-    <div class="col-md-4">
-      <div class="tinted">
-        <a href="/seek_care/">
-          <img class="bs-docs-featurette-img img-responsive" src="/static/imgs/pic-content/pic17_480.jpg">
+</div>
+<div class="row">
+  <div class="col-md-4">
+    <div class="tinted">
+      <a href="/seek_care/">
+        <img class="bs-docs-featurette-img img-responsive" src="/static/imgs/pic-content/pic17_480.jpg">
+        <div class="carousel-caption carousel-caption-ctr">
+          <h3>The Problem: Lack of Access</h3>
+        </div>
+      </a>
+    </div>
+    <h4 class="text-center">41% of San Antonio adults lack access to basic dental care.</h4>
+  </div>
+  <div class="col-md-4">
+    <div class="tinted">
+      <a href="/seek_care/sched_vst">
+        <img class="bs-docs-featurette-img img-responsive" src="/static/imgs/pic-content/pic18_480.jpg">
           <div class="carousel-caption carousel-caption-ctr">
-            <h3>The Problem: Lack of Access</h3>
+            <h3>Breaking Down Barriers</h3>
           </div>
-        </a>
-      </div>
-      <h4 class="text-center">41% of San Antonio adults lack access to basic dental care.</h4>
+      </a>
     </div>
-    <div class="col-md-4">
-      <div class="tinted">
-        <a href="/seek_care/sched_vst">
-            <img class="bs-docs-featurette-img img-responsive" src="/static/imgs/pic-content/pic18_480.jpg">
-                <div class="carousel-caption carousel-caption-ctr">
-                    <h3>Breaking Down Barriers</h3>
-                </div>
-                </a>
-      </div>
-        <h4 class="text-center">We provide free dental care to San Antonio's homeless and low income adults.</h4>
-    </div>
-    <div class="col-md-4">
-      <div class="tinted">
-        <a href="/get_involved/">
-            <img class="bs-docs-featurette-img img-responsive" src="/static/imgs/pic-content/pic19_480.jpg">
-                <div class="carousel-caption carousel-caption-ctr">
-                    <h3>How You Can Help</h3>
-                </div>
-                </a>
-      </div>
-        <h4 class="text-center">Help us shape San Antonio's future, together.</h4>
-    </div>
+    <h4 class="text-center">We provide free dental care to San Antonio's homeless and low income adults.</h4>
   </div>
+  <div class="col-md-4">
+    <div class="tinted">
+      <a href="/get_involved/">
+        <img class="bs-docs-featurette-img img-responsive" src="/static/imgs/pic-content/pic19_480.jpg">
+        <div class="carousel-caption carousel-caption-ctr">
+          <h3>How You Can Help</h3>
+        </div>
+      </a>
+    </div>
+    <h4 class="text-center">Help us shape San Antonio's future, together.</h4>
+  </div>
+</div>
+
 <hr class="half-rule">
-  <div class="row">
-    <div class="col-md-4 text-center">
-        <img class="frontpageicon img-responsive" src="/static/imgs/logos/Local_Partnerships.gif">
-        <h4 class="text-center">Eradicating poverty requires strong partnerships</h4>
-    </div>
-    <div class="col-md-4 text-center">
-        <img class="frontpageicon img-responsive" src="/static/imgs/logos/Credentials.gif">
-        <h4 class="text-center">Certifications you can trust</h4>
-    </div>
-    <div class="col-md-4 text-center">
-        <img class="frontpageicon img-responsive" src="/static/imgs/logos/Privately_Funded.gif">
-        <h4 class="text-center">Every dollar of our funding is born and raised in Texas</h4>
-    </div>
+
+<div class="row">
+  <div class="col-md-4 text-center">
+    <img class="frontpageicon img-responsive" src="/static/imgs/logos/Local_Partnerships.gif">
+    <h4 class="text-center">Eradicating poverty requires strong partnerships</h4>
   </div>
+  <div class="col-md-4 text-center">
+    <img class="frontpageicon img-responsive" src="/static/imgs/logos/Credentials.gif">
+    <h4 class="text-center">Certifications you can trust</h4>
+  </div>
+  <div class="col-md-4 text-center">
+    <img class="frontpageicon img-responsive" src="/static/imgs/logos/Privately_Funded.gif">
+    <h4 class="text-center">Every dollar of our funding is born and raised in Texas</h4>
+  </div>
+</div>
 </div>
