--- a/content/get_involved/donations_2.html
+++ b/content/get_involved/donations_2.html
@@ -8,45 +8,47 @@ tags:
 
 <script type="text/javascript" src="/static/scripts/vancoServices.js" defer></script>
 <div class="bs-docs-featurette border1">
-    <h2 class="bs-docs-featurette-title">Help our Mission by Making a Monetary Donation</h2>
-    <p class="lead">As a nonprofit dental health provider, we rely heavily on individual monetary donations to provide services to those in need.</p>
+  <h2 class="bs-docs-featurette-title">Help our Mission by Making a Monetary Donation</h2>
+  <p class="lead">As a nonprofit dental health provider, we rely heavily on individual monetary donations to provide services to those in need.</p>
+</div>
+<hr class="half-rule">
+<div class="row">
+  <div class="col-xs-1">
+  </div>
+  <div class="col-md-4 col-md-offset-4 well" id="transaction-central">
+    <p> Step: <span id="tx-one" style="font-size:2em;">1</span> __
+              <span id="tx-two">2</span> __
+              <span id="tx-three">3</span> __
+              <span id="tx-four">4</span>
+    </p>
 
-    <hr class="half-rule">
-
-    <div class="well row" id="transaction-central">
-      <p> Step: <span id="tx-one" style="font-size:2em;">1</span> __
-                <span id="tx-two">2</span> __
-                <span id="tx-three">3</span> __
-                <span id="tx-four">4</span>
-      </p>
-
-      <div class="text-center" id="transaction-amount-block">
-        <form class="form row" role="form" id="amount-form" method="post">
-          <table class="table">
-            <tr>
-              <td>Operational Support: <input class="percent-ops" type="number" min=0 max=100 value='0' name="percent-ops">%</td>
-              <td>Patient Care: <input class="percent-patient" type="number" min=0 max=100 value='0' name="percent-patient">%</td>
-              <td>Discretionary: <input class="percent-disc" type="number" min=0 max=100 value='100' name="percent-disc">%</td>
-            </tr>
-            <tr>
-              <td><button class="btn btn-default" type="submit" value="10">$10</button></td>
-              <td><button class="btn btn-default" type="submit" value="25">$25</button></td>
-              <td><button class="btn btn-default" type="submit" value="100">$100</button></td>
-            </tr>
-            <tr>
-              <td><button class="btn btn-default" type="submit" value="1000">$1000</button></td>
-              <td><button class="btn btn-default" type="submit" value="2500">$2500</button></td>
-              <td><button class="btn btn-default" type="submit" value="10000">$10000</button></td>
-            </tr>
-            <tr>
-              <td><button class="btn btn-default" type="submit" value="10000">$10000</button></td>
-              <td><button class="btn btn-default" type="submit" value="25000">$25000</button></td>
-              <td>Other: <input type="text" name="enteredAmount"></td>
-            </tr>
-          </table>
-          <button class="btn btn-default" type="submit" id="customAmt" value="custom">Next</button>
-        </form>
-      </div>
+    <div class="text-center" id="transaction-amount-block">
+      <form class="form row" role="form" id="amount-form" method="post">
+        <table class="table">
+          <tr>
+            <td>Operational Support: <input class="percent-ops" type="number" min=0 max=100 value='0' name="percent-ops">%</td>
+            <td>Patient Care: <input class="percent-patient" type="number" min=0 max=100 value='0' name="percent-patient">%</td>
+            <td>Discretionary: <input class="percent-disc" type="number" min=0 max=100 value='100' name="percent-disc">%</td>
+          </tr>
+          <tr>
+            <td><button class="btn btn-default" type="submit" value="10">$10</button></td>
+            <td><button class="btn btn-default" type="submit" value="25">$25</button></td>
+            <td><button class="btn btn-default" type="submit" value="100">$100</button></td>
+          </tr>
+          <tr>
+            <td><button class="btn btn-default" type="submit" value="1000">$1000</button></td>
+            <td><button class="btn btn-default" type="submit" value="2500">$2500</button></td>
+            <td><button class="btn btn-default" type="submit" value="10000">$10000</button></td>
+          </tr>
+          <tr>
+            <td><button class="btn btn-default" type="submit" value="10000">$10000</button></td>
+            <td><button class="btn btn-default" type="submit" value="25000">$25000</button></td>
+            <td>Other: <input type="text" name="enteredAmount"></td>
+          </tr>
+        </table>
+        <button class="btn btn-default" type="submit" id="customAmt" value="custom">Next</button>
+      </form>
+    </div>
 
     <div class="" id="transaction-who-block" style="display:none;">
       <p> Please enter your billing information as it appears on your account. </p>
@@ -125,22 +127,22 @@ tags:
     <p>If you would like to make more advanced contributions (recurring) please visit: ...</p>
   </div>
 
-    <form class="CS form-horizontal" style="display:none;" role="form" id="CS-form" method="post">
-      <div class="form-group">
-        <label for="cardType">Account Number</label>
-        <input type="text" name="accountnumber"> <!-- Always -->
-      </div>
-      <div class="form-group">
-        <label for="cardType">Routing Number</label>
-        <input type="text" name="routingnumber"> <!-- Type=C or Type=S -->
-      </div>
-      <button type="submit" id="submitCS" >Donate</button>      
-    </form>
+  <form class="CS form-horizontal" style="display:none;" role="form" id="CS-form" method="post">
+    <div class="form-group">
+      <label for="cardType">Account Number</label>
+      <input type="text" name="accountnumber"> <!-- Always -->
     </div>
+    <div class="form-group">
+      <label for="cardType">Routing Number</label>
+      <input type="text" name="routingnumber"> <!-- Type=C or Type=S -->
+    </div>
+    <button type="submit" id="submitCS" >Donate</button>      
+  </form>
+  </div>
+</div>
 
     <p class="text-center">If you would like to make a monetary donation, please contact us via telephone at (210) 220-2300 or email at <a href="mailto:info@sachristiandental.org?Subject=Would%20Like%20to%20Make%20a%20Donation" target="_top">info@sachristiandental.org</a>.  Or, you can click on the link below to make a donation on-line.  Your contributions are always appreciated!</p>
 
     <a href="https://www.eservicepayments.com/cgi-bin/Vanco_ver3.vps?appver3=Fi1giPL8kwX_Oe1AO50jRr_5EY00pUXvBEVaNoq9qEBEOVZpPcIw91FrYieK2rA42EvVVAEjqawDomKT1pbouVk0gddPaqI8aWBIbUwUpP0=&ver=3" class="btn btn-primary active" role="button" target="_blank">DONATE NOW</a>
 
     <hr class="half-rule">
-</div>
