--- a/content/get_involved/donations_2.html
+++ b/content/get_involved/donations_2.html
@@ -3,30 +3,44 @@ title: Donations
 group: Get Involved
 precedence: 1
 tags:
-  - service 
+  - service
 ---
 
 <script type="text/javascript" src="/static/scripts/vancoServices.js" defer></script>
 <div class="bs-docs-featurette border1">
-  <h2 class="bs-docs-featurette-title">Help our Mission by Making a Monetary Donation</h2>
-  <p class="lead">As a nonprofit dental health provider, we rely heavily on individual monetary donations to provide services to those in need.</p>
+  <h2 class="bs-docs-featurette-title">
+    Help our Mission by Making a Monetary Donation
+  </h2>
+  <p class="lead">
+  As a nonprofit dental health provider, we rely heavily on individual monetary donations to provide services to those in need.
+  </p>
 </div>
+
 <hr class="half-rule">
+
 <div class="row">
-  <div class="col-xs-1">
-  </div>
   <div class="col-md-4 col-md-offset-4 well" id="transaction-central">
-    <p> Step: <span id="tx-one" style="font-size:2em;">1</span> __
-              <span id="tx-two">2</span> __
-              <span id="tx-three">3</span> __
-              <span id="tx-four">4</span>
-    </p>
+    <div class="row">
+      <div class="col-xs-3" id="tx-one" style="font-size:2em;">1</div>
+      <div class="col-xs-3" id="tx-two">2</div>
+      <div class="col-xs-3" id="tx-three">3</div>
+      <div class="col-xs-3" id="tx-four">4</div>
+    </div>
 
     <div class="text-center" id="transaction-amount-block">
       <form class="form row" role="form" id="amount-form" method="post">
         <table class="table">
           <tr>
-            <td>Operational Support: <input class="percent-ops" type="number" min=0 max=100 value='0' name="percent-ops">%</td>
+            <td>
+              Operational Support:
+              <input  class="percent-ops"
+                      type="number"
+                      min=0
+                      max=100
+                      value='0'
+                      name="percent-ops">
+              %
+            </td>
             <td>Patient Care: <input class="percent-patient" type="number" min=0 max=100 value='0' name="percent-patient">%</td>
             <td>Discretionary: <input class="percent-disc" type="number" min=0 max=100 value='100' name="percent-disc">%</td>
           </tr>
@@ -74,26 +88,25 @@ tags:
           <input type="text" name="email" value="m@m.com">
         </div>
         <button type="submit">Next</button>
-      </form> 
+      </form>
     </div>
 
     <form class="form row" role="form" style="display:none;" id="type-form" method="post">
       <div class="row col-xs-6">
         <div class="form-group col-xs-4">
           <label class="control-label">Credit/Debit Card</label>
-          <input type="radio" value="CC" name="accounttype" id="payment">
+          <input type="radio" value="CC" name="accounttype" id="paymentCC">
         </div>
         <div class="form-group col-xs-4">
           <label class="control-label">Checking</label>
-          <input type="radio" value="C" name="accounttype" id="payment">
+          <input type="radio" value="C" name="accounttype" id="paymentC">
         </div>
         <div class="form-group col-xs-4">
           <label class="control-label">Savings</label>
-          <input type="radio" value="S" name="accounttype" id="payment">
+          <input type="radio" value="S" name="accounttype" id="paymentS">
         </div>
       </div>
     </form>
-
 
     <div class="" id="transaction-CC-block" style="display:none;">
       <div>Ok you want to donate: $<span class="amount"></span></div>
@@ -116,15 +129,17 @@ tags:
             <input type="text" name="expyear" value="15"> <!-- Type=CC -->
           </div>
         </div>
-        <button type="submit" id="submitCC">Donate: $<span class="amount"></span></button>     
+        <button type="submit" id="submitCC">Donate: $<span class="amount"></span></button>
       </form>
     </div>
 
   <div class="" id="transaction-confirm-block" style="display:none;">
     <p> If the following is wrong please click the data to correct:</p>
     <span id="confirm-data"></span>
-    <p>Thank you for your generous contribution!  The people of SA thank you!</p>
-    <p>If you would like to make more advanced contributions (recurring) please visit: ...</p>
+		<p>
+      Thank you for your generous contribution!  The people of SA thank you!
+		</p>
+		<p> For more advanced contributions (recurring) please visit: ...  </p>
   </div>
 
   <form class="CS form-horizontal" style="display:none;" role="form" id="CS-form" method="post">
@@ -136,7 +151,7 @@ tags:
       <label for="cardType">Routing Number</label>
       <input type="text" name="routingnumber"> <!-- Type=C or Type=S -->
     </div>
-    <button type="submit" id="submitCS" >Donate</button>      
+    <button type="submit" id="submitCS" >Donate</button>
   </form>
   </div>
 </div>
@@ -145,4 +160,4 @@ tags:
 
     <a href="https://www.eservicepayments.com/cgi-bin/Vanco_ver3.vps?appver3=Fi1giPL8kwX_Oe1AO50jRr_5EY00pUXvBEVaNoq9qEBEOVZpPcIw91FrYieK2rA42EvVVAEjqawDomKT1pbouVk0gddPaqI8aWBIbUwUpP0=&ver=3" class="btn btn-primary active" role="button" target="_blank">DONATE NOW</a>
 
-    <hr class="half-rule">
+<hr class="half-rule">
