--- a/content/get_involved/donations_2.html
+++ b/content/get_involved/donations_2.html
@@ -78,32 +78,56 @@ tags:
     <div class="" id="transaction-who-block">
       <p> Please enter your billing information as it appears on your account. </p>
       <form class="form row" role="form" id="who-form" method="post">
-        <div class="col-xs-6">
-          <div>Ok you want to donate: $<span class="amount"></span></div>
-          <div class="row">
-            <div class="col-xs-6">
-              <label>First Name</label>
-              <input type="text" name="first" value="Matthew">
-            </div>
-            <div class="col-xs-6">
-              <label>Last Name</label>
-              <input type="text" name="last" value="Doe">
-            </div>
+        <div>Ok you want to donate: $<span class="amount"></span></div>
+        <div class="row">
+          <div class="col-xs-6">
+            <label>First Name</label>
+            <input type="text" name="first" value="Matthew">
           </div>
-          <div class="row">
+          <div class="col-xs-6">
+            <label>Last Name</label>
+            <input type="text" name="last" value="Doe">
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xs-6">
             <label>Address 1</label>
             <input type="text" name="addr1" value="1 Heart Way">
-            <label>Address 2</label>
-            <input type="text" name="addr2">
-            <label>City</label>
-            <input type="text" name="city" value="Galveston">
-            <label>State/Zip</label>
-            <input type="text" name="state" value="TX">/<input type="text" name="zip" value="20740">
-            <label>Phone Number</label>
-            <input type="text" name="phone" value="555-555-5555">
-            <label>Email Address</label>
-            <input type="text" name="email" value="m@m.com">
           </div>
+        </div>
+        <div class="row">
+          <div class="col-xs-6">
+          <label>Address 2</label>
+          <input type="text" name="addr2">
+        </div>
+        </div>
+        <div class="row">
+          <div class="col-xs-6">
+          <label>City</label>
+          <input type="text" name="city" value="Galveston">
+        </div>
+        </div>
+        <div class="row">
+          <div class="col-xs-6">
+          <label>State</label>
+          <input type="text" name="state" value="TX">
+        </div>
+          <div class="col-xs-6">
+          <label>Zip</label>
+          <input type="text" name="zip" value="20740">
+        </div>
+        </div>
+        <div class="row">
+          <div class="col-xs-6">
+          <label>Phone Number</label>
+          <input type="text" name="phone" value="555-555-5555">
+        </div>
+        </div>
+        <div class="row">
+          <div class="col-xs-6">
+          <label>Email Address</label>
+          <input type="text" name="email" value="m@m.com">
+        </div>
         </div>
         <button type="submit">Next</button>
       </form>
