--- a/content/clinic_info/downloads.html
+++ b/content/clinic_info/downloads.html
@@ -1,16 +1,16 @@
 ---
 title: Annual Report
-group: Clinic Info
+group: Our Solution
 tags:
   - none
 ---
 
 <div class="bs-docs-featurette">
-<div class="col-md-8 col-md-offset-2">
   <h2 class="bs-docs-featurette-title">SACDC Annual Reports</h2>
     <p class="lead">Starting in 2013, SACDC has put out annual reports in a digital format so that you can learn more about our passion and work! Please feel free to read through the past reports to learn more about who we are and what we do.</p></br>
-</div>
-<div class="col-md-6 col-md-offset-3">
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
       <a href="http://online.fliphtml5.com/egva/dsrs/#p=1" target="_blank"><img src="/static/imgs/Annual_Report.jpg" alt="Sass and Less support" class="bs-docs-featurette-img img-responsive"></a>
+  </div>
 </div>
 </div>
