Created why_oral placeholder

--- a/content/index.html
+++ b/content/index.html
@@ -66,7 +66,7 @@ tags:
 <div class="row">
   <div class="col-md-4">
     <div class="tinted">
-      <a href="/seek_care/">
+      <a href="/why_oral/">
         <img class="bs-docs-featurette-img img-responsive" src="/static/imgs/pic-content/pic17_480_dark.jpg">
         <div class="carousel-caption carousel-caption-ctr">
           <h3>The Problem: Lack of Access</h3>
